# mempalace

./: CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
mempalace/: _drawer_upsert.py  _runtime.py  cli.py  config.py  convo_miner.py  knowledge_graph.py  mcp_server.py  miner.py  palace.py  repair.py  searcher.py  version.py
mempalace/backends/: chroma.py  chroma_http.py  registry.py
mempalace/kg/: __init__.py  _schema.py  base.py  factory.py  postgres.py  sqlite.py
tests/: test_backends.py  test_chroma_http_backend.py  test_cli.py  test_drawer_upsert.py  test_kg_conformance.py  test_kg_thread_safety.py  test_mcp_server.py  test_readme_claims.py
